<resources>
    <string name="app_name">GanBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="type_message">Type a message</string>
    <string name="bad_email_msg">Please enter a valid email address.</string>
    <string name="select_picture">Select Picture</string>
    <string name="no_images_selected">No pictures were selected</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="albums">Albums</string>
    <string name="not_if_empty">operation cannot be performed on an empty album</string>
    <string name="operation_cannot_be_performed">Operation cannot be performed at the moment. Please try again later</string>
    <string name="waiting_for_approval">Waiting for teacher\'s approval</string>
    <string name="approal_check_later">Please check again a little later</string>
    <string name="logount_pop_title">Logout</string>
    <string name="popup_btn_ok">OK</string>
    <string name="popup_btn_cancel">Cancel</string>
    <string name="logount_pop_text">Are you sure you want to logout?</string>
    <string name="upload_photo_text">Are you sure you want to upload theses photos?</string>
    <string name="upload_video_text">Are you sure you want to upload this video?</string>
    <string name="gan_data_incompete">Please fill all kindergarten fields</string>
    <string name="kid_data_incompete">Please fill all kid fields</string>
    <string name="send_btn">Send</string>
    <string name="cancel_btn">Cancel</string>
    <string name="existing_lib_opt">Existing Library</string>
    <string name="new_pict_opt">Take New Picture</string>
    <string name="empty_album">Album is empty</string>
    <string name="empty_contact_list">No contacts were found</string>
    <string name="empty_albums_list">No albums yet!</string>
    <string name="photos_pref">photos</string>
    <string name="videos_pref">videos</string>
    <string name="video_pref">one video</string>
    <string name="kids">kids</string>
    <string name="parents">parents</string>
    <string name="parent_details_header">Parent Details</string>
    <string name="btn_upload">Send to parent</string>
    <string name="btn_upload_video">Send video to parent</string>
    <string name="upload_in_progress">Upload is now in progress. You will be notified on its completion</string>
    <string name="upload_completed">Upload was successfully completed</string>
    <string name="upload_completed_with_errors">an error occurred while uploading images</string>
    <string name="add">Add</string>
    <string name="add_album_sidemenu">Create Album</string>
    <string name="album_name_hint">Album name</string>
    <string name="new_album_caption">New Album</string>
    <string name="kindergarten_name">Kindergarten Name</string>
    <string name="kindergarten_phone">Phone</string>
    <string name="kindergarten_address">Adderss</string>
    <string name="kindergarten_city">City</string>
    <string name="teacher_name">Teacher\'s Name</string>
    <string name="teacher_mobile">Teacher\'s Mobile</string>
    <string name="gallery">Gallery</string>
    <string name="messages">Messages</string>
    <string name="viewed">Viewed</string>
    <string name="viewed_str">%1$d of %2$s viewed</string>
    <string name="views_str">Views:</string>
    <string name="send_email">Send</string>
    <string name="caption_enter_code">Enter Code</string>
    <string name="txt_send">Send</string>
    <string name="select_class">Select Class</string>
    <string name="done">Done</string>
    <string name="please_select_class">Please select a class:</string>
    <string name="select_opt">Select</string>
    <string name="rename_opt">Change Album Name</string>
    <string name="rename_album_txt">Enter album name:</string>
    <string name="no_images_sel">At least one image must be selected</string>
    <string name="kindergarten_code_pref">Kindergarten code:</string>
    <string name="cannot_perform_op">operation could not be performed. Please try again later.</string>
    <string name="operation_failed">operation could not be performed. Please try again later.</string>
    <string name="error_loading_user">Error loading user from local cache</string>
    <string name="current_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="verify_pass">Verify New Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="set_all_pass">All password values must be set</string>
    <string name="not_verify_pass">New password verification failed</string>
    <string name="lost_pass_title">Foergot Password</string>
    <string name="on_lost_pass">Enter your email address and we will send you a link to reset your password</string>
    <string name="lost_pass_notif">Please check your mail and reset your password</string>
    <string name="viewed_by">Viewed by</string>
    <string name="didnt_view">Didn\'t view</string>
    <string name="total_str">Total: </string>
    <string name="total_parents_str">Total Parents: </string>
    <string name="invitation_subject">Ganbook Invitation</string>
    <string name="invitation_body_part_1">Dear parents. Our School has started using the amazing Ganbook app for communication and photo sharing. You can download the app here: http://ganbook.co.il/store_download.html. After you register, use this code:</string>
    <string name="invitation_body_part_2">, and connect to your kid\'s Class</string>
    <string name="invitation_parent_subject">Ganbook Invitation</string>
    <string name="invitation_parent_body_part_1">Hi, Our School has started using the amazing Ganbook app for communication and photo sharing. I have started using it and it absolutely brilliant. I thought you would like to try it too. You can download the app here: http://ganbook.co.il/store_download.html.\nSchool code is: </string>
    <string name="whoami_not_set">Please specify who are you</string>
    <string name="uploading_now_notif">Uploading is in progress..</string>
    <string name="no_class_name">Class name must be specified</string>
    <string name="no_album_name">Album name must be specified</string>
    <string name="class_name">Class Name</string>
    <string name="class_name_hint">Kindergarten Name</string>
    <string name="kindergarten_details_title">Kindergarten Details</string>
    <string name="class_phone_hint">Phone</string>
    <string name="class_address_hint">Address</string>
    <string name="class_city_hint">City</string>
    <string name="class_teachername_hint">Teacher\'s Full Name</string>
    <string name="class_teachermobile_hint">Teacher\'s Mobile</string>
    <string name="operation_proceeding">Operation is proceeding. Please wait..</string>
    <string name="operation_succeeded">Operation has been successfully completed.</string>
    <string name="select_btn">Select</string>
    <string name="add_album_btn">Add</string>
    <string name="save_btn">Save</string>
    <string name="btn_cancel_select">Cancel</string>
    <string name="logged_out">User has been logged out</string>
    <string name="btn_ok">OK</string>
    <string name="processing_wait">Processing. Please wait...</string>
    <string name="are_you_sure_delete">Are you sure you want to delete drawing?</string>
    <string name="uploading_images_now">Uploading Images. This action may take some time...</string>
    <string name="notif_title">GanBook</string>
    <string name="saving_kid">Saving kid. Please wait...</string>
    <string name="kid_successfully_added">Kid Successfully Saved</string>
    <string name="invite_friend_subject">GanBook Invitation</string>
    <string name="invite_friend_body">Hi, Our School has started using the amazing Ganbook app for communication and photo sharing. I have started using it and it absolutely brilliant. I thought you would like to try it in your School too. You can download the app here:http://ganbook.co.il/store_download.html.
    </string>
    <string name="existing_library">Existing Library</string>
    <string name="existing_video_library">Existing Video</string>
    <string name="take_new_pict">Take New Picture</string>
    <string name="take_new_vid">Take New Video</string>
    <string name="cancel">Cancel</string>
    <string name="share_via">Share Via</string>
    <string name="share_pict_subject">Photos from</string>
    <string name="share_vid_subject">Video from</string>
    <string name="share_pict_body">Sent by GanBook application\n http://ganbook.co.il/store_download.html</string>
    <string name="send_reminder">Send Reminder</string>
    <string name="kindergarten">Kindergarten</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="k_num">Kindergarten Number</string>
    <string name="invite_parents">Invite Parents</string>
    <string name="settings">Settings</string>
    <string name="title_activity_zoom">ZoomActivity</string>
    <string name="login_progress">Logging in. Please wait...</string>
    <string name="register_progress">Registering. Please wait...</string>
    <string name="add_kid_here">Add Kid Here</string>
    <string name="add_class_here">Add Class Here</string>
    <string name="contact_list_header">Contact List</string>
    <string name="contact_profile_header">Contact Profile</string>
    <string name="edit_parent_header">Edit Parent</string>
    <string name="edit_btn">Edit</string>
    <string name="feedback_subject">GanBook Feedback</string>
    <string name="feedback_body">Hello GanBook team, I wish to share my feedback with you...</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_parent_details">ParentDetails</string>
    <string name="register">Register</string>
    <string name="email_hint">Email Address</string>
    <string name="choose_pass">Choose Password</string>
    <string name="name">Name</string>
    <string name="home_number">Home Number</string>
    <string name="addess">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="State">State</string>
    <string name="district">District</string>
    <string name="some_text">Some Text</string>
    <string name="add_class_caption">Add Class</string>
    <string name="full_name">Full Name</string>
    <string name="reigster_aknowledge_text">By creating the GanBook user account you acknowledge\n that you have read ,understood and agree to the GanBook\n</string>
    <string name="enter_code_text">Enter the code you recieved\nfrom the teacher</string>
    <string name="enter_code">Enter Code</string>
    <string name="request_code">If you have not received such a code\nplease contact the teacher.</string>
    <string name="save">Save</string>
    <string name="i_am">I am:</string>
    <string name="privacy_terms">Privacy Terms</string>
    <string name="terms_of_service">Terms of use</string>
    <string name="and">and</string>
    <string name="mom">Mom</string>
    <string name="dad">Dad</string>
    <string name="teacher">Teacher</string>
    <string name="back">back</string>
    <string name="or">OR</string>
    <string name="stay_school">Stay in the same school</string>
    <string name="end_year_text_parent">Registration for the year 2017 has began \n\n All The information from last year has been saved and transferend to the HISTORY section and will be accessible at all time \n\n You can choose between leaving your kid\'s profile connected to the old kindergarten, or connect it to a new one, by entering the a new kindergarten code and await approval \n\n Good luck</string>
    <string name="thanks">Thanks</string>
    <string name="new_updates">New Updates</string>
    <string name="staff_string">Staff</string>
    <string name="student">Student</string>
</resources>