<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include layout="@layout/app_bar_layout"
		android:id="@id/app_bar" />

	<EditText
		android:id="@+id/enter_full_name"
		android:layout_width="fill_parent"
		android:layout_height="@dimen/edit_text_height"
		android:layout_below="@id/app_bar"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:layout_marginTop="20dp"
		android:background="@drawable/edit_bg"
		android:hint="@string/full_name"
		android:inputType="text"
		android:nextFocusForward="@+id/enter_email"
		android:paddingEnd="10dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingStart="10dp"
		android:textColorHint="@android:color/darker_gray" >

		<requestFocus />
	</EditText>

	<TextView
		android:id="@+id/i_am_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/enter_full_name"
		android:layout_marginTop="30dp"
		android:paddingBottom="10dp"
		android:textSize="20sp"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:text="@string/i_am" />

	<LinearLayout
		android:id="@+id/i_am"
		android:layout_below="@+id/i_am_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="20dp"
		android:gravity="center"
		android:orientation="horizontal" >

		<RadioGroup
			android:id="@+id/rg_group"
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:layout_gravity="center_horizontal"
			android:gravity="center_horizontal"
			android:orientation="horizontal" >

			<RadioButton
				android:id="@+id/mom"
				android:layout_width="65dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/radiobtn_margin"
				android:drawableTop="@drawable/rd_back_mom"
				android:text="@string/mom"
				android:gravity="center"
				android:button="@null" />

			<RadioButton
				android:id="@+id/dad"
				android:layout_width="65dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/radiobtn_margin"
				android:drawableTop="@drawable/rd_back_dad"
				android:text="@string/dad"
				android:gravity="center"
				android:button="@null" />

			<RadioButton
				android:id="@+id/teacher"
				android:layout_width="65dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/radiobtn_margin"
				android:drawableTop="@drawable/rd_back_teacher"
				android:text="@string/teacher"
				android:gravity="center"
				android:button="@null" />

			<RadioButton
				android:id="@+id/staff"
				android:layout_width="65dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/radiobtn_margin"
				android:drawableTop="@drawable/staff_show"
				android:text="@string/staff_string"
				android:gravity="center"
				android:button="@null" />
			<RadioButton
				android:id="@+id/student"
				android:layout_width="65dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/radiobtn_margin"
				android:drawableTop="@drawable/rd_back_student"
				android:text="@string/student"
				android:gravity="center"
				android:visibility="gone"
				android:button="@null" />

		</RadioGroup>
	</LinearLayout>



	<EditText
		android:id="@+id/enter_email"
		android:layout_width="fill_parent"
		android:layout_height="@dimen/edit_text_height"
		android:layout_below="@+id/i_am"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:background="@drawable/edit_bg"
		android:hint="@string/email_hint"
		android:inputType="textEmailAddress"
		android:nextFocusForward="@+id/password"
		android:paddingEnd="10dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingStart="10dp"
		android:textColorHint="@android:color/darker_gray" />

	<EditText
		android:id="@+id/password"
		android:layout_width="fill_parent"
		android:layout_height="@dimen/edit_text_height"
		android:layout_below="@+id/enter_email"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:layout_marginTop="15dp"
		android:background="@drawable/edit_bg"
		android:hint="@string/choose_pass"
		android:inputType="textPassword"
		android:nextFocusForward="@+id/register_btn"
		android:paddingEnd="10dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingStart="10dp"
		android:textColorHint="@android:color/darker_gray" />

	<TextView
		android:id="@+id/terms_of_use_txt"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/terms_of_use_layout"
		android:layout_centerInParent="true"
		android:autoLink="web"
		android:gravity="center"
		android:text="@string/reigster_aknowledge_text"
		android:textColor="@android:color/darker_gray"
		android:textSize="12sp" />

	<LinearLayout
		android:id="@+id/terms_of_use_layout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="10dp"
		android:gravity="center_horizontal"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/terms_of_service"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:autoLink="web"
			android:text="@string/terms_of_service"
			android:textColor="@color/url_text_color"
			android:textSize="12sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:autoLink="web"
			android:text="@string/and"
			android:textColor="@android:color/darker_gray"
			android:textSize="12sp" />

		<TextView
			android:id="@+id/privacy_terms"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:autoLink="web"
			android:text="@string/privacy_terms"
			android:textColor="@color/url_text_color"
			android:textSize="12sp" />
	</LinearLayout>

	<Button
		android:id="@+id/register_btn"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_below="@+id/password"
		android:layout_centerInParent="true"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:layout_marginTop="15dp"
		android:background="@drawable/entry_button_selector"
		android:focusable="true"
		android:text="@string/register"
		android:textColor="@android:color/white"
		android:textSize="@dimen/text_size" />

</RelativeLayout>