<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F7F7F7"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/actionbar_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/add_class_caption"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/save_btn" 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:layout_marginRight="15dp"
        android:text="@string/save"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        android:textStyle="bold"/>
    
    <Button
        android:id="@+id/back_btn" 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:layout_marginLeft="15dp"
        android:onClick="onActinbarSaveClicked"
        android:text="@string/back"
        android:visibility="gone"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        android:textStyle="bold"/>

    
    
</RelativeLayout>