<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/bg_color">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/home_number"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/home_number"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/mobile"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/addess"
            android:inputType="textPostalAddress"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/city"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/country"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/country"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/state"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/State"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/district"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/district"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/some_text"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/some_text"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="45dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>

</ScrollView>