<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="15dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_updates"
        android:gravity="center_horizontal"
        android:textColor="@color/album_title_text_color"
        android:textStyle="bold"
        android:textSize="25sp"
        />


    <TextView
        android:id="@+id/new_year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_year_text_parent"
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:textColor="@color/album_title_text_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/tnx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:background="@drawable/green_selector"
        android:layout_gravity="center_horizontal"
        android:text="@string/thanks"
        android:onClick="thanks"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    </LinearLayout>

</ScrollView>